Added fonts and enrollment success dialog.

--- a/MyHome/app/src/main/res/layout/activity_forgot_password.xml
+++ b/MyHome/app/src/main/res/layout/activity_forgot_password.xml
@@ -27,12 +27,13 @@
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/email"
+            style="@style/tradeGothicLTStd_14"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
+            android:layout_margin="42dp"
             android:hint="@string/prompt_email"
             android:inputType="textEmailAddress"
-            android:layout_margin="42dp"
             android:maxLines="1"
             android:paddingLeft="10dp"
             android:paddingRight="10dp" />
@@ -47,8 +48,7 @@
             android:layout_marginLeft="42dp"
             android:layout_marginRight="42dp"
             android:onClick="@{handlers::onClickEvent}"
-            android:text="@string/action_reset"
-            android:textStyle="bold" />
+            android:text="@string/action_reset" />
 
         <!-- Login progress -->
         <ProgressBar
