--- a/MyHome/app/src/main/res/layout/adapter_sq_list.xml
+++ b/MyHome/app/src/main/res/layout/adapter_sq_list.xml
@@ -16,7 +16,7 @@
 
         <TextView
             android:id="@+id/question_view"
-            style="@android:style/TextAppearance.DeviceDefault.Medium"
+            style="@style/tradeGothicLTStd_14"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="@{handlers::onClickEvent}"
