--- a/MyHome/app/src/main/res/layout/fragment_login.xml
+++ b/MyHome/app/src/main/res/layout/fragment_login.xml
@@ -35,6 +35,7 @@
 
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/email"
+                style="@style/tradeGothicLTStd_14"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_above="@+id/password"
@@ -51,6 +52,7 @@
 
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/password"
+                style="@style/tradeGothicLTStd_14"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_above="@+id/log_in_button"
@@ -70,6 +72,7 @@
                 style="@style/grayButtonStyle"
                 android:layout_width="match_parent"
                 android:layout_above="@+id/forgot_password"
+                android:textStyle="normal"
                 android:layout_marginBottom="62dp"
                 android:layout_marginLeft="52dp"
                 android:layout_marginRight="52dp"
@@ -79,6 +82,7 @@
 
             <TextView
                 android:id="@+id/forgot_password"
+                style="@style/tradeGothicLTStd_14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_above="@+id/login_help"
@@ -93,6 +97,7 @@
 
             <TextView
                 android:id="@+id/login_help"
+                style="@style/tradeGothicLTStd_14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_above="@+id/enroll_now"
@@ -106,6 +111,7 @@
 
             <TextView
                 android:id="@+id/enroll_now"
+                style="@style/tradeGothicLTStd_14"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
