--- a/MyHome/app/src/main/res/values/styles.xml
+++ b/MyHome/app/src/main/res/values/styles.xml
@@ -6,7 +6,7 @@
         <item name="colorAccent">@color/accent</item>
     </style>
 
-    <style name="ToolBarTheme.ToolBarStyle"    parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+    <style name="ToolBarTheme.ToolBarStyle" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
         <item name="android:textColorPrimary">@color/primary_dark</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textColorPrimaryInverse">@color/toolbar_white_text</item>
@@ -20,12 +20,38 @@
     <style name="grayButtonStyle" parent="Widget.AppCompat.Button">
         <item name="android:background">@drawable/button_boarder_grey</item>
         <item name="android:textColor">@color/grey</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textSize">14sp</item>
         <item name="android:layout_height">44dp</item>
+
     </style>
 
     <style name="enableButtonStyle" parent="Widget.AppCompat.Button">
         <item name="android:background">@drawable/button_enabled</item>
         <item name="android:textColor">@color/white</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textSize">14sp</item>
         <item name="android:layout_height">44dp</item>
+    </style>
+
+    <style name="textStylebase" />
+
+    <style name="tradeGothicLTStd" parent="textStylebase">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">@color/md_blue_grey_650</item>
+    </style>
+
+    <style name="tradeGothicLTStd_16" parent="tradeGothicLTStd">
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="tradeGothicLTStd_14" parent="tradeGothicLTStd">
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="tradeGothicLTStd_20" parent="tradeGothicLTStd">
+        <item name="android:textSize">20sp</item>
     </style>
 </resources>
