--- a/MyHome/app/src/main/res/layout/profile_edit.xml
+++ b/MyHome/app/src/main/res/layout/profile_edit.xml
@@ -186,18 +186,19 @@
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/phone_layout"
                 android:layout_width="0dp"
-                android:layout_weight=".6"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp">
+                android:layout_marginBottom="16dp"
+                android:layout_weight=".6">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/phone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
-                    android:focusable="false"
+                    android:ems="10"
                     android:hint="Phone Number"
-                    android:inputType="number"
+                    android:inputType="phone"
+                    android:maxLength="14"
                     android:maxLines="1" />
 
             </android.support.design.widget.TextInputLayout>
