--- a/MyHome/app/src/main/res/layout/contact_us.xml
+++ b/MyHome/app/src/main/res/layout/contact_us.xml
@@ -1,68 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:padding="12dp">
 
     <TextView
         android:id="@+id/header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
+        android:layout_gravity="center"
         android:layout_margin="12dp"
         android:gravity="center"
-        android:text="Thank you for visiting Dignity Health. We're right here you need us."
+        android:text="Thank you for visiting Dignity Health."
         android:textSize="24sp" />
 
     <TextView
         android:id="@+id/subheader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/header"
-        android:layout_centerHorizontal="true"
+        android:layout_gravity="center"
         android:layout_margin="12dp"
+        android:fontFamily="sans-serif-light"
         android:gravity="center"
-        android:text="If this is an emergency, please call 911 immediately"
-        android:textColor="@color/red"
+        android:text="We're here when you need us."
         android:textSize="18sp" />
 
     <TextView
-        android:id="@+id/email_label"
+        android:id="@+id/warning"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/subheader"
-        android:layout_margin="6dp"
-        android:text="By Email: "
-        android:textSize="16sp" />
+        android:layout_gravity="center"
+        android:layout_margin="12dp"
+        android:fontFamily="sans-serif-light"
+        android:gravity="center"
+        android:text="If this is an emergency, please call 911 immediately."
+        android:textColor="@color/red"
+        android:textSize="14sp" />
 
-    <TextView
-        android:id="@+id/email"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/email_label"
-        android:layout_margin="6dp"
-        android:text="hello@dignityhealth.com"
-        android:textColor="@color/light_blue"
-        android:textSize="20sp" />
+        android:layout_gravity="center"
+        android:layout_marginTop="64dp"
+        android:orientation="horizontal"
+        android:padding="12dp">
 
-    <TextView
-        android:id="@+id/phone_label"
-        android:layout_width="wrap_content"
+        <ImageView
+            android:id="@+id/email_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="6dp"
+            android:src="@mipmap/email" />
+
+        <TextView
+            android:id="@+id/email"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="12dp"
+            android:text="hello@dignityhealth.com"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/email"
-        android:layout_margin="6dp"
-        android:text="By Phone: "
-        android:textSize="16sp" />
+        android:layout_gravity="center"
+        android:layout_marginTop="24dp"
+        android:orientation="horizontal"
+        android:padding="12dp">
 
-    <TextView
-        android:id="@+id/phone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/phone_label"
-        android:layout_margin="6dp"
-        android:autoLink="phone"
-        android:text="1-877-345-6788"
-        android:textColorLink="@color/light_blue"
-        android:textSize="20sp" />
+        <ImageView
+            android:id="@+id/phone_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="6dp"
+            android:src="@mipmap/phone" />
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/phone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="12dp"
+            android:autoLink="phone"
+            android:text="1-877-345-6788"
+            android:textColorLink="@color/light_blue"
+            android:textSize="20sp" />
+
+    </LinearLayout>
+
+</LinearLayout>
