--- a/MyHome/app/src/main/res/layout/fragment_enrollment.xml
+++ b/MyHome/app/src/main/res/layout/fragment_enrollment.xml
@@ -7,152 +7,158 @@
             type="com.dignityhealth.myhome.features.enrollment.EnrollmentFragment.EnrollmentViewClickEvent" />
     </data>
 
-    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center_horizontal"
-        android:orientation="vertical"
-        tools:context="com.dignityhealth.myhome.features.login.LoginActivity">
+        android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/login_logo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/toolbar"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="32dp"
-            android:layout_marginTop="30dp"
-            android:src="@mipmap/home_logo" />
-
-        <RelativeLayout
-            android:id="@+id/email_login_form"
+        <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="40dp"
-            android:focusableInTouchMode="true"
-            android:orientation="vertical">
+            android:layout_height="match_parent"
+            android:gravity="center_horizontal"
+            android:orientation="vertical"
+            tools:context="com.dignityhealth.myhome.features.login.LoginActivity">
 
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/firstName"
-                style="@style/tradeGothicLTStd_14"
-                android:layout_width="match_parent"
+            <ImageView
+                android:id="@+id/login_logo"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_above="@+id/lastName"
-                android:layout_marginBottom="16dp"
-                android:layout_marginLeft="42dp"
-                android:layout_marginRight="42dp"
-                android:hint="@string/prompt_first_name"
-                android:imeOptions="actionNext"
-                android:inputType="textEmailAddress"
-                android:maxLines="1"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp" />
-
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/lastName"
-                style="@style/tradeGothicLTStd_14"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_above="@+id/email"
-                android:layout_marginBottom="16dp"
-                android:layout_marginLeft="42dp"
-                android:layout_marginRight="42dp"
-                android:hint="@string/prompt_last_name"
-                android:imeOptions="actionNext"
-                android:inputType="textEmailAddress"
-                android:maxLines="1"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp" />
-
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/email"
-                style="@style/tradeGothicLTStd_14"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_above="@+id/password_layout"
-                android:layout_marginBottom="16dp"
-                android:layout_marginLeft="42dp"
-                android:layout_marginRight="42dp"
-                android:hint="@string/prompt_email"
-                android:imeOptions="actionNext"
-                android:inputType="textEmailAddress"
-                android:maxLines="1"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp" />
+                android:layout_below="@+id/toolbar"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="32dp"
+                android:layout_marginTop="30dp"
+                android:src="@mipmap/home_logo" />
 
             <RelativeLayout
-                android:id="@+id/password_layout"
+                android:id="@+id/email_login_form"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_above="@+id/re_enter_password"
-                android:layout_marginBottom="16dp"
-                android:layout_marginLeft="42dp"
-                android:layout_marginRight="42dp">
+                android:layout_below="@+id/login_logo"
+                android:focusableInTouchMode="true"
+                android:orientation="vertical">
 
                 <android.support.design.widget.TextInputEditText
-                    android:id="@+id/password"
+                    android:id="@+id/firstName"
                     style="@style/tradeGothicLTStd_14"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_toLeftOf="@+id/password_criteria"
-                    android:drawableRight="@mipmap/show_password"
-                    android:hint="@string/prompt_password"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginBottom="16dp"
+                    android:layout_marginLeft="42dp"
+                    android:layout_marginRight="42dp"
+                    android:hint="@string/prompt_first_name"
                     android:imeOptions="actionNext"
+                    android:inputType="textEmailAddress"
+                    android:maxLines="1"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp" />
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/lastName"
+                    style="@style/tradeGothicLTStd_14"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/firstName"
+                    android:layout_marginBottom="16dp"
+                    android:layout_marginLeft="42dp"
+                    android:layout_marginRight="42dp"
+                    android:hint="@string/prompt_last_name"
+                    android:imeOptions="actionNext"
+                    android:inputType="textEmailAddress"
+                    android:maxLines="1"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp" />
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/email"
+                    style="@style/tradeGothicLTStd_14"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/lastName"
+                    android:layout_marginBottom="16dp"
+                    android:layout_marginLeft="42dp"
+                    android:layout_marginRight="42dp"
+                    android:hint="@string/prompt_email"
+                    android:imeOptions="actionNext"
+                    android:inputType="textEmailAddress"
+                    android:maxLines="1"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp" />
+
+                <RelativeLayout
+                    android:id="@+id/password_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/email"
+                    android:layout_marginBottom="16dp"
+                    android:layout_marginLeft="42dp"
+                    android:layout_marginRight="42dp">
+
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/password"
+                        style="@style/tradeGothicLTStd_14"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_toLeftOf="@+id/password_criteria"
+                        android:drawableRight="@mipmap/show_password"
+                        android:hint="@string/prompt_password"
+                        android:imeOptions="actionNext"
+                        android:inputType="textPassword"
+                        android:maxLines="1"
+                        android:paddingLeft="10dp"
+                        android:paddingRight="10dp" />
+
+                    <ImageView
+                        android:id="@+id/password_criteria"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerInParent="true"
+                        android:onClick="@{handlers::onClickEvent}"
+                        android:paddingBottom="8dp"
+                        android:paddingLeft="8dp"
+                        android:paddingRight="8dp"
+                        android:paddingTop="8dp"
+                        android:src="@mipmap/password_criteria" />
+                </RelativeLayout>
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/re_enter_password"
+                    style="@style/tradeGothicLTStd_14"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/password_layout"
+                    android:layout_marginLeft="42dp"
+                    android:layout_marginRight="42dp"
+                    android:hint="@string/prompt_re_enter_password"
+                    android:imeOptions="actionDone"
                     android:inputType="textPassword"
                     android:maxLines="1"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp" />
 
-                <ImageView
-                    android:id="@+id/password_criteria"
-                    android:layout_width="wrap_content"
+                <Button
+                    android:id="@+id/enroll_button"
+                    style="@style/grayButtonStyle"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerInParent="true"
+                    android:layout_below="@+id/re_enter_password"
+                    android:layout_marginBottom="40dp"
+                    android:layout_marginLeft="42dp"
+                    android:layout_marginRight="42dp"
+                    android:layout_marginTop="32dp"
                     android:onClick="@{handlers::onClickEvent}"
-                    android:paddingBottom="8dp"
-                    android:paddingLeft="8dp"
-                    android:paddingRight="8dp"
-                    android:paddingTop="8dp"
-                    android:src="@mipmap/password_criteria" />
+                    android:text="@string/action_next" />
             </RelativeLayout>
 
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/re_enter_password"
-                style="@style/tradeGothicLTStd_14"
-                android:layout_width="match_parent"
+            <!-- Enroll progress -->
+            <ProgressBar
+                android:id="@+id/enroll_progress"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_above="@+id/enroll_button"
-                android:layout_marginLeft="42dp"
-                android:layout_marginRight="42dp"
-                android:hint="@string/prompt_re_enter_password"
-                android:imeOptions="actionDone"
-                android:inputType="textPassword"
-                android:maxLines="1"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp" />
-
-            <Button
-                android:id="@+id/enroll_button"
-                style="@style/grayButtonStyle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_marginBottom="40dp"
-                android:layout_marginLeft="42dp"
-                android:layout_marginRight="42dp"
-                android:onClick="@{handlers::onClickEvent}"
-                android:text="@string/action_next" />
+                android:layout_centerInParent="true"
+                android:layout_marginBottom="8dp"
+                android:indeterminate="true"
+                android:visibility="gone" />
         </RelativeLayout>
-
-        <!-- Enroll progress -->
-        <ProgressBar
-            android:id="@+id/enroll_progress"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_marginBottom="8dp"
-            android:indeterminate="true"
-            android:visibility="gone" />
-    </RelativeLayout>
+    </ScrollView>
 </layout>
