--- a/MyHome/app/src/main/res/layout/fragment_login.xml
+++ b/MyHome/app/src/main/res/layout/fragment_login.xml
@@ -72,13 +72,13 @@
                 style="@style/grayButtonStyle"
                 android:layout_width="match_parent"
                 android:layout_above="@+id/forgot_password"
-                android:textStyle="normal"
-                android:layout_marginBottom="62dp"
+                android:layout_marginBottom="48dp"
                 android:layout_marginLeft="52dp"
                 android:layout_marginRight="52dp"
                 android:onClick="@{handlers::onClickEvent}"
                 android:text="@string/action_Login"
-                android:textAllCaps="false" />
+                android:textAllCaps="false"
+                android:textStyle="normal" />
 
             <TextView
                 android:id="@+id/forgot_password"
