--- a/MyHome/app/src/main/res/layout/toolbar.xml
+++ b/MyHome/app/src/main/res/layout/toolbar.xml
@@ -8,4 +8,4 @@
     android:fitsSystemWindows="true"
     android:minHeight="?attr/actionBarSize"
     android:titleTextColor="@color/toolbar_text"
-    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+    app:theme="@style/ToolBarTheme.ToolBarStyle" />
