--- a/MyHome/app/src/main/res/values/styles.xml
+++ b/MyHome/app/src/main/res/values/styles.xml
@@ -6,9 +6,10 @@
         <item name="colorAccent">@color/accent</item>
     </style>
 
-    <style name="ToolBarTheme.ToolBarStyle" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
-        <item name="android:textColorPrimary">@color/primary_dark</item>
-        <item name="android:textColor">@color/white</item>
+    <style name="ToolBarTheme.ToolBarStyle" parent="ThemeOverlay.AppCompat.Light">
+        <item name="android:textColorPrimary">@color/white</item>
+        <item name="android:textColor">@color/primary</item>
+        <item name="android:textColorSecondary">@color/white</item>
         <item name="android:textColorPrimaryInverse">@color/toolbar_white_text</item>
     </style>
 
@@ -24,7 +25,6 @@
         <item name="android:textAllCaps">false</item>
         <item name="android:textSize">14sp</item>
         <item name="android:layout_height">44dp</item>
-
     </style>
 
     <style name="enableButtonStyle" parent="Widget.AppCompat.Button">
