--- a/MyHome/app/src/main/res/layout/fragment_secq.xml
+++ b/MyHome/app/src/main/res/layout/fragment_secq.xml
@@ -35,6 +35,7 @@
             android:layout_marginTop="70dp"
             android:hint="@string/prompt_answer"
             android:imeOptions="actionDone"
+            android:inputType="text"
             android:lines="1"
             android:maxLines="1" />
 
