--- a/MyHome/app/src/main/res/layout/toolbar_white.xml
+++ b/MyHome/app/src/main/res/layout/toolbar_white.xml
@@ -6,4 +6,4 @@
     android:background="@android:color/transparent"
     android:elevation="4dp"
     android:fitsSystemWindows="true"
-    app:theme="@style/ToolBarTheme.ToolBarStyle" />
+    app:theme="@style/ToolBarTheme.ToolBarStyle.Light" />
