--- a/MyHome/app/src/main/res/values/colors.xml
+++ b/MyHome/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
 
     <color name="primary">@color/teal</color>
     <color name="primary_dark">@color/teal_dark</color>
-    <color name="accent">@color/teal_light</color>
+    <color name="accent">@color/teal</color>
     <color name="secondary_text">#757575</color>
     <color name="divider_color">#BDBDBD</color>
 
