Have accent color match primary color

--- a/MyHome/app/src/main/res/layout/activity_terms_of_service.xml
+++ b/MyHome/app/src/main/res/layout/activity_terms_of_service.xml
@@ -48,7 +48,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:background="@color/teal">
+            android:background="@color/primary">
 
             <TextView
                 android:id="@+id/tc_cancel"
