--- a/MyHome/app/src/main/res/drawable/button_boarder_teal.xml
+++ b/MyHome/app/src/main/res/drawable/button_boarder_teal.xml
@@ -6,5 +6,5 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/teal" />
+        android:color="@color/primary" />
 </shape>
