--- a/MyHome/app/src/main/res/drawable/button_enabled.xml
+++ b/MyHome/app/src/main/res/drawable/button_enabled.xml
@@ -2,11 +2,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/teal" />
+    <solid android:color="@color/primary" />
 
     <stroke
         android:width="1dp"
-        android:color="@color/teal" />
+        android:color="@color/primary" />
     <corners
         android:bottomLeftRadius="60dp"
         android:bottomRightRadius="60dp"
