--- a/MyHome/app/src/main/res/layout/popup_content.xml
+++ b/MyHome/app/src/main/res/layout/popup_content.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:background="@color/teal"
+        android:background="@color/primary"
         android:lineSpacingExtra="4dp"
         android:padding="16dp"
         android:textColor="@color/white" />
