--- a/MyHome/app/src/main/res/layout/tos.xml
+++ b/MyHome/app/src/main/res/layout/tos.xml
@@ -1,12 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/terms_of_service"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="Terms of Service Stuff Here..." />
+        android:layout_marginTop="16dp"
+        android:text="Terms Of Service here..." />
 
-</LinearLayout>
+    <ProgressBar
+        android:id="@+id/terms_progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:indeterminate="true"
+        android:visibility="gone" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@color/primary">
+
+        <TextView
+            android:id="@+id/tc_cancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toLeftOf="@+id/tc_accept"
+            android:background="@drawable/button_boarder_teal"
+            android:gravity="center"
+            android:onClick="@{handlers::onClickEvent}"
+            android:padding="16dp"
+            android:paddingLeft="32dp"
+            android:text="Cancel"
+            android:textColor="@color/white" />
+
+        <TextView
+            android:id="@+id/tc_accept"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:background="@drawable/button_boarder_teal"
+            android:gravity="center_vertical"
+            android:onClick="@{handlers::onClickEvent}"
+            android:padding="16dp"
+            android:paddingLeft="32dp"
+            android:text="Accept"
+            android:textColor="@color/white" />
+    </RelativeLayout>
+</RelativeLayout>
