More layout tweaks

--- a/MyHome/app/src/main/res/layout/contact_us.xml
+++ b/MyHome/app/src/main/res/layout/contact_us.xml
@@ -12,7 +12,7 @@
         android:layout_gravity="center"
         android:layout_margin="12dp"
         android:gravity="center"
-        android:text="Thank you for visiting Dignity Health."
+        android:text="Thank you for visiting\n Dignity Health."
         android:textSize="24sp" />
 
     <TextView
