--- a/MyHome/app/src/main/res/layout/contact_us.xml
+++ b/MyHome/app/src/main/res/layout/contact_us.xml
@@ -60,6 +60,7 @@
             android:layout_marginLeft="12dp"
             android:text="hello@dignityhealth.com"
             android:textSize="20sp"
+            android:textColor="@color/text_darker"
             android:textStyle="bold" />
 
     </LinearLayout>
@@ -85,8 +86,9 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="12dp"
             android:autoLink="phone"
+            android:textStyle="bold"
             android:text="1-877-345-6788"
-            android:textColorLink="@color/light_blue"
+            android:textColorLink="@color/text_darker"
             android:textSize="20sp" />
 
     </LinearLayout>
