--- a/MyHome/app/src/main/res/layout/activity_forgot_password.xml
+++ b/MyHome/app/src/main/res/layout/activity_forgot_password.xml
@@ -20,35 +20,72 @@
             layout="@layout/toolbar_white" />
 
         <View
+            android:id="@+id/divider"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_below="@+id/toolbarWhite"
             android:background="@color/black" />
+
+        <TextView
+            android:id="@+id/header"
+            style="@style/tradeGothicLTStd"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/divider"
+            android:layout_marginTop="16dp"
+            android:paddingEnd="16dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:paddingStart="16dp"
+            android:text="Please enter your email address."
+            android:textColor="@color/text_dark"
+            android:textSize="32dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/subheader"
+            style="@style/tradeGothicLTStd"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/header"
+            android:layout_marginTop="0dp"
+            android:paddingEnd="16dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:paddingStart="16dp"
+            android:text="An email will be sent to entered address with reset instructions"
+            android:textColor="@color/text_dark"
+            android:textSize="20sp" />
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/email"
             style="@style/tradeGothicLTStd_14"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_margin="42dp"
+            android:layout_below="@id/subheader"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="42dp"
             android:hint="@string/prompt_email"
             android:inputType="textEmailAddress"
             android:maxLines="1"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp" />
+            android:paddingEnd="16dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:paddingStart="16dp" />
 
         <Button
             android:id="@+id/forgot_password_button"
             style="@style/grayButtonStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
+            android:layout_below="@id/email"
             android:layout_marginBottom="40dp"
             android:layout_marginLeft="42dp"
             android:layout_marginRight="42dp"
+            android:layout_marginTop="42dp"
             android:onClick="@{handlers::onClickEvent}"
-            android:text="@string/action_reset" />
+            android:text="@string/action_reset_password" />
 
         <!-- Login progress -->
         <ProgressBar
