--- a/MyHome/app/src/main/res/layout/contact_us.xml
+++ b/MyHome/app/src/main/res/layout/contact_us.xml
@@ -58,7 +58,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="12dp"
-            android:text="hello@dignityhealth.com"
+            android:text="hello@dignityhealth.org"
             android:textSize="20sp"
             android:textColor="@color/text_darker"
             android:textStyle="bold" />
@@ -87,7 +87,7 @@
             android:layout_marginLeft="12dp"
             android:autoLink="phone"
             android:textStyle="bold"
-            android:text="1-877-345-6788"
+            android:text="1-844-274-8497"
             android:textColorLink="@color/text_darker"
             android:textSize="20sp" />
 
