--- a/MyHome/app/src/main/res/values/styles.xml
+++ b/MyHome/app/src/main/res/values/styles.xml
@@ -61,4 +61,8 @@
     <style name="tradeGothicLTStd_20" parent="tradeGothicLTStd">
         <item name="android:textSize">20sp</item>
     </style>
+
+    <style name="tradeGothicLTStd_24" parent="tradeGothicLTStd">
+        <item name="android:textSize">24sp</item>
+    </style>
 </resources>
