--- a/MyHome/app/src/main/res/layout/navigation_activity.xml
+++ b/MyHome/app/src/main/res/layout/navigation_activity.xml
@@ -6,9 +6,15 @@
 
     <include
         android:id="@+id/toolbar"
-        layout="@layout/toolbar"
+        layout="@layout/toolbar_white"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_below="@+id/toolbar"
+        android:background="@color/md_blue_grey_650" />
 
     <FrameLayout
         android:id="@+id/frame"
