--- a/MyHome/app/src/main/res/layout/toolbar.xml
+++ b/MyHome/app/src/main/res/layout/toolbar.xml
@@ -3,9 +3,8 @@
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
-    android:background="@color/toolbar_background"
     android:elevation="4dp"
     android:fitsSystemWindows="true"
     android:minHeight="?attr/actionBarSize"
     android:titleTextColor="@color/toolbar_text"
-    app:theme="@style/ToolBarTheme.ToolBarStyle.Dark" />
+    app:theme="@style/ToolBarTheme.ToolBarStyle.Light"/>
