Cleaned up Contact Us layout (added in divider line)

--- a/MyHome/app/src/main/res/values/colors.xml
+++ b/MyHome/app/src/main/res/values/colors.xml
@@ -47,6 +47,7 @@
 
     <color name="light_grey">#cfcfcf</color>
     <color name="light_brown">#d6d3ca</color>
+    <color name="beige">#D1D1D1</color>
     <color name="light_blue">#66CCFF</color>
     <color name="light_orange">#AAFF6600</color>
 
