--- a/MyHome/app/src/main/res/layout/contact_us.xml
+++ b/MyHome/app/src/main/res/layout/contact_us.xml
@@ -1,56 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="12dp">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/header"
-        style="@style/tradeGothicLTStd_24"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="32dp"
-        android:gravity="center"
-        android:text="Thank you for visiting\n Dignity Health." />
-
-    <TextView
-        android:id="@+id/subheader"
-        style="@style/tradeGothicLTStd_20"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="16dp"
-        android:fontFamily="sans-serif-light"
-        android:gravity="center"
-        android:text="We're here when you need us." />
-
-    <TextView
-        android:id="@+id/warning"
-        style="@style/tradeGothicLTStd_14"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="16dp"
-        android:fontFamily="sans-serif-light"
-        android:gravity="center"
-        android:text="If this is a medical emergency, please call 911."
-        android:textColor="@color/red" />
-
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="64dp"
-        android:orientation="horizontal"
-        android:padding="12dp">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/email_label"
+        <TextView
+            android:id="@+id/header"
+            style="@style/tradeGothicLTStd_24"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center"
+            android:layout_marginTop="32dp"
+            android:gravity="center"
+            android:text="Thank you for visiting\n Dignity Health." />
+
+        <TextView
+            android:id="@+id/subheader"
+            style="@style/tradeGothicLTStd_20"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/header"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center"
+            android:layout_margin="16dp"
+            android:fontFamily="sans-serif-light"
+            android:gravity="center"
+            android:text="We're here when you need us." />
+
+        <TextView
+            android:id="@+id/warning"
+            style="@style/tradeGothicLTStd_14"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/subheader"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center"
+            android:layout_margin="16dp"
+            android:fontFamily="sans-serif-light"
+            android:gravity="center"
+            android:text="If this is a medical emergency, please call 911 immediately."
+            android:textColor="@color/red" />
+
+        <ImageView
+            android:id="@+id/email_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/warning"
+            android:layout_marginLeft="52dp"
+            android:layout_marginTop="92dp"
             android:padding="6dp"
             android:src="@mipmap/email" />
 
@@ -59,27 +61,34 @@
             style="style/tradeGothicLTStd_16"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@id/warning"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="12dp"
+            android:layout_marginTop="92dp"
+            android:layout_toRightOf="@id/email_icon"
+            android:padding="6dp"
             android:text="hello@dignityhealth.org"
             android:textColor="@color/text_darker"
+            android:textSize="16dp"
             android:textStyle="bold" />
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="24dp"
-        android:orientation="horizontal"
-        android:padding="12dp">
+        <View
+            android:id="@+id/divider"
+            android:layout_width="wrap_content"
+            android:layout_height="2dp"
+            android:layout_below="@id/email"
+            android:layout_marginBottom="47dp"
+            android:layout_marginLeft="18dp"
+            android:layout_marginTop="47dp"
+            android:layout_toRightOf="@id/email_icon"
+            android:background="@color/beige" />
 
         <ImageView
-            android:id="@+id/phone_label"
+            android:id="@+id/phone_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@id/divider"
+            android:layout_marginLeft="52dp"
             android:padding="6dp"
             android:src="@mipmap/phone" />
 
@@ -88,12 +97,14 @@
             style="style/tradeGothicLTStd_16"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
+            android:layout_below="@id/divider"
             android:layout_marginLeft="12dp"
+            android:layout_toRightOf="@id/phone_icon"
             android:autoLink="phone"
+            android:padding="6dp"
             android:text="1-844-274-8497"
             android:textColorLink="@color/text_darker"
+            android:textSize="16dp"
             android:textStyle="bold" />
-
-    </LinearLayout>
-</LinearLayout>
+    </RelativeLayout>
+</ScrollView>
