Upped Build Number. Changed Forgot Password Header's color to the proper color. Added gender and preferred name to Profile View

--- a/MyHome/app/src/main/res/layout/activity_forgot_password.xml
+++ b/MyHome/app/src/main/res/layout/activity_forgot_password.xml
@@ -38,7 +38,7 @@
             android:paddingRight="16dp"
             android:paddingStart="16dp"
             android:text="Please enter your email address."
-            android:textColor="@color/text_dark"
+            android:textColor="@color/text_darker"
             android:textSize="32dp"
             android:textStyle="bold" />
 
