fad with static params for REST API

--- a/MyHome/app/src/main/res/layout/fragment_login.xml
+++ b/MyHome/app/src/main/res/layout/fragment_login.xml
@@ -42,6 +42,7 @@
                 android:layout_marginLeft="52dp"
                 android:layout_marginRight="52dp"
                 android:hint="@string/prompt_email"
+                android:text="cmajji@gmail.com"
                 android:imeOptions="actionNext"
                 android:inputType="textEmailAddress"
                 android:maxLines="1"
@@ -60,6 +61,7 @@
                 android:layout_marginRight="52dp"
                 android:drawableRight="@mipmap/show_password"
                 android:hint="@string/prompt_password"
+                android:text="Password123*"
                 android:imeOptions="actionDone"
                 android:inputType="textPassword"
                 android:maxLines="1"
